--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <h3>Save your research for later</h3>
       <a class = "loginButton" href="#">Log In</a>
       <a class = "signup" href="#">Sign Up</a>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
     </div>
 
