--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <h3>Save your research for later</h3>
       <a class = "loginButton" href="#">Log In</a>
       <a class = "signup" href="#">Sign Up</a>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>
+        Pintereach allows you to save articles in a streamlines fashion. Categorize your articles
+        and have easy access to them later. 
+      </p>
     </div>
     </div>
 
