added mor description

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <a class = "signup" href="#">Sign Up</a>
       <p>
         Pintereach allows you to save articles in a streamlines fashion. Categorize your articles
-        and have easy access to them later. 
+        and have easy access to them later. Users can save articles, assign categories, and delete
+        saved articles.
       </p>
     </div>
     </div>
