--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="https://kit.fontawesome.com/a82d0d4e27.js" crossorigin="anonymous"></script>
 
-    <title>Pintereach- About</title>
+    <title>Pintereach - About</title>
   </head>
 
   <body>
@@ -88,8 +88,8 @@
         <nav>
           <a href = "index.html">Home</a>
           <a href = "about.html">About</a>
-          <a href = "#">Log In</a>
-          <a href = "#">Sign Up</a>
+          <a href = "https://pintereachlambda2020.netlify.com">Log In</a>
+          <a href = "https://pintereachlambda2020.netlify.com">Sign Up</a>
         </nav>
       </footer>
   </body>
