--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <i class="fas fa-thumbtack"></i>
       <h1>Welcome to Pintereach</h1>
       <h3>Save your research for later</h3>
-      <a class = "loginButton" href="#">Log In</a>
-      <a class = "signup" href="#">Sign Up</a>
+      <a class = "loginButton" href="https://pintereachlambda2020.netlify.com">Log In</a>
+      <a class = "signup" href="https://pintereachlambda2020.netlify.com">Sign Up</a>
       <p>
         Pintereach allows you to save articles in a streamlines fashion. Categorize your articles
         and have easy access to them later. Users can save articles, assign categories, and delete
@@ -30,8 +30,8 @@
       <nav>
         <a href = "index.html">Home</a>
         <a href = "about.html">About</a>
-        <a href = "#">Log In</a>
-        <a href = "#">Sign Up</a>
+        <a href = "https://pintereachlambda2020.netlify.com">Log In</a>
+        <a href = "https://pintereachlambda2020.netlify.com">Sign Up</a>
       </nav>
     </footer>
 
