--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="https://kit.fontawesome.com/a82d0d4e27.js" crossorigin="anonymous"></script>
 
-    <title>Pintereach - About</title>
+    <title>About | Pintereach</title>
   </head>
 
   <body>
