removed zoe from about

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <i class="fas fa-thumbtack"></i>
       <h1>Welcome to Pintereach</h1>
       <h3>Save your research for later</h3>
-      <a class = "loginButton" href="https://pintereachlambda2020.netlify.com">Log In</a>
-      <a class = "signup" href="https://pintereachlambda2020.netlify.com">Sign Up</a>
+      <a class = "homeButton" href="https://pintereachlambda2020.netlify.com">Pintereach Home</a>
       <p>
         Pintereach allows you to save articles in a streamlines fashion. Categorize your articles
         and have easy access to them later. Users can save articles, assign categories, and delete
