--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             <p>California</p>
             <p>Web 29</p>
             <p>
-                Lives in San Francisco but has never been to the Saleforce building
+                Lives in San Francisco but has never been to the SalesForce building
             </p>
             </div>
         </div>
