--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h3>Save your research for later</h3>
       <a class = "homeButton" href="https://pintereachlambda2020.netlify.com">Pintereach Home</a>
       <p>
-        Pintereach allows you to save articles in a streamlines fashion. Categorize your articles
+        Pintereach allows you to save articles in a streamlined fashion. Categorize your articles
         and have easy access to them later. Users can save articles, assign categories, and delete
         saved articles.
       </p>
